# HoraDelCodigo

./: README.md  add_workshop.py
workshops/ejemplo/000_introduccion-para-comprobar-que-el-script-funciona-en-casos-raros-con-tildes-aaa_20251113/: README.md
workshops/fullstack/000_fullstack-la-experiencia-web-al-completo_20251108/: README.md
workshops/fullstack/000_fullstack-la-experiencia-web-al-completo_20251108/Diapos-FullStack/: slides.md
workshops/fullstack/000_fullstack-la-experiencia-web-al-completo_20251108/resources/: docker-compose.yml
workshops/fullstack/000_taller-fullstack-la-experiencia-web-al-completo_20251108/: README.md
workshops/java/000_introduccion-java-20251113/: README.md
workshops/linux/000_basicos-del-uso-de-una-maquina-linux_20251111/: README.md
workshops/neovim/000_from-zero-to-hero_20251104/: README.md
workshops/python/000_python-testing_20251112/: .gitignore  README.md  WORKSHOP_GUIDE.md  pyproject.toml  pytest.ini
workshops/python/000_python-testing_20251112/python-testing-presentation/: package.json  slides.md
workshops/python/000_python-testing_20251112/src/testing_workshop/: __init__.py  api.py  calculator.py  string_processor.py  user_service.py
workshops/python/000_python-testing_20251112/tests/: test_api.py  test_calculator_hypothesis.py  test_calculator_pytest.py  test_calculator_unittest.py  test_database.py  test_tdd_example.py  test_user_service.py
workshops/rust/000_seguridad-eficiencia-y-comodidad_20251113/: README.md
workshops/strudel/000_strudel-musica-y-programacion_20251112/: README.md
(+27 files in other folders)
