[project]
name = "testing-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.121.1",
  "httpx>=0.28.1",
  "hypothesis>=6.141.1",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-xdist>=3.8.0",
  "requests>=2.32.5",
  "testcontainers>=4.13.0",
  "uvicorn>=0.38.0",
]
